# apfel

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  circle.yml  configure  configure.ac
branches/trucated_solution/: configure.ac
branches/trucated_solution/apfelGUI/forms/: apfelmainwindow.ui
branches/trucated_solution/apfelGUI/src/: plotmembers.cxx
branches/trucated_solution/doc/: manual.tex
branches/trucated_solution/examples/: LHgridDerivativeProduction.f  LHgridProduction.f  Tabulation.f  TabulationCxx.cc
branches/trucated_solution/include/: Makefile.am
branches/trucated_solution/pywrap/: Makefile.in
branches/trucated_solution/src/: Makefile.am  Makefile.in
branches/trucated_solution/src/DIS/: PDFparam.f
examples/: CMakeLists.txt  CheckAPFEL.f  CheckAPFELCxx.cc  DISObservables.f  DISObservablesCxx.cc  LHgridDerivativeProduction.f  LHgridDerivativeProductionCxx.cc  LHgridProduction.f  LHgridProductionCxx.cc  LHgridProductionPython  ListFunctions.f  ListFunctionsCxx.cc  Luminosity.f  LuminosityCxx.cc  LuminosityPython  Makefile.am  Makefile.in  SumRules.f  SumRulesCxx.cc  SumRulesPython  Tabulation.f  TabulationCxx.cc  TabulationExternal.f  TabulationExternalCxx.cc  TabulationFrag.f  TabulationFragCxx.cc  TabulationPython  TabulationStep.f  Timing.cc  input.txt
lib/: Makefile.am  Makefile.in
pywrap/: CMakeLists.txt  Makefile.am  Makefile.in  apfel.i  apfel.py  apfel_wrap.cc  setup.py.in
src/: EqualOperatorsQEDnf.f  EvolutionOperatorsQCD.f  IdentityOperatorsQCD.f  InitializeAPFEL.f  LHAPDFgrid.f  Makefile.am  Makefile.in  SetPDFSet.f  a_QCD.f  apfelversion.cc  initParameters.f  integralsMatching.f  odeintnsQCD.f  xPDF.f
src/APPLgridInterface/: APPLgridEvolutionFilter.cc  Makefile  TestConvolution.cc
src/DIS/: CacheStructureFunctionsAPFEL.f  ComputeChargesDIS.f  ComputeDISOperators.f  ComputeDISOperators.f.IC  ComputeStructureFunctionsAPFEL.f  ConvolutePDFsWithDISOperators.f  EnableDampingFONLL.f  EnableDynamicalScaleVariations.f  EnableIntrinsicCharm.f  EnableSFNLOQEDCorrections.f  ExcludeScaleVariation.f  ExternalDISOperator.f  F2bottom.f  F2charm.f  F2light.f  F2top.f  F2total.f  F3bottom.f  F3charm.f  F3light.f  F3top.f  F3total.f  FF0CoefficientFunctions.f  FFCoefficientFunctions.f  FKObservables.f  FKSimulator.f  FLbottom.f  FLcharm.f  FLlight.f  FLtop.f  FLtotal.f  GetCKM.f  GetFKObservable.f  GetProtonMass.f  GetSIATotalCrossSection.f  GetSin2ThetaW.f  GetWMass.f  IncludeIntrinsicCharm.f  IncludeNLOQEDCorrections.f  IncludeScaleVariation.f  (+63 more)
src/DIS/commons/: hmass.h  nf.h  vfns.h
src/DIS_new/: ComputeChargesDIS.f  ComputeDISOperators.f  ComputeStructureFunctionsAPFEL.f  ConvoluteEvolutionWithDISOperators.f  ConvolutePDFsWithCFs.f  ConvolutePDFsWithDISOperators.f  EnableTargetMassCorrections.f  ExcludeScaleVariation.f  ExternalDISOperator.f  F2bottom.f  F2charm.f  F2light.f  F2top.f  F2total.f  F3bottom.f  F3charm.f  F3light.f  F3top.f  F3total.f  FKObservables.f  FKSimulator.f  FLbottom.f  FLcharm.f  FLlight.f  FLtop.f  FLtotal.f  GetCKM.f  GetGFermi.f  GetProtonMass.f  GetSIATotalCrossSection.f  GetSinThetaW.f  GetWMass.f  GetZMass.f  IncludeScaleVariation.f  InitializeAPFEL_DIS.f  JoinDISOperators.f  MassiveCoefficientFunctions.f  RSLintegralsDIS.f  RSLintegralsSIA.f  ReportParametersDIS.f  (+14 more)
src/Evolution/: AlphaQCD.f  AlphaQED.f  CachePDFsAPFEL.f  CheckAPFEL.f  CleanUp.f  ComputeHeavyQuarkThresholds.f  DerivativeOperatorsQCD.f  DerivativeOperatorsQED.f  DeriveAPFEL.f  DerivePDFs.f  EnableEvolutionOperator.f  EnableLeptonEvolution.f  EnableNLOQEDCorrections.f  EnableWelcomeMessage.f  EqualOperatorsUnifiednf.f  EvolutionOperatorsQCD.f  EvolutionOperatorsQED.f  EvolutionOperatorsUnified.f  EvolutionQCD.f  EvolutionQED.f  EvolutionUnified.f  EvolveAPFEL.f  EvolvePDFs.f  EvolveQCD.f  EvolveQED.f  EvolveUni.f  ExponentiatedEvolveAPFEL.f  ExternalEvolutionMatrixEv2Ev.f  ExternalEvolutionMatrixEv2Ph.f  ExternalEvolutionMatrixPh2Ph.f  ExternalEvolutionOperator.f  ExternalSetAPFEL.f  ExternalSplittingFunctions.f  GetLambdaQCD.f  GetMaxFlavourAlpha.f  GetMaxFlavourPDFs.f  GetMuF.f  GetPerturbativeOrder.f  GetThreshold.f  HeavyQuarkMass.f  (+90 more)
src/FTDY/commons/: DYcouplings.h  alphae.h  brz.h  cDY.h  ckm.h  consts.h  convfact.h  corrections.h  cutoff.h  gmu.h  kinematics.h  mxdata.h  mxgridsize.h  mxgridsizeDY.h  ngau.h  ngaus.h  set.h  sigmafk.h  sinthetaw.h  wmass.h  xgridDY.h  xxDY.h  zedmass.h
src/FTDY/src/: ComputeFKTables.f  ComputeHardCrossSectionsDY.f  PDFphys2ev.f  PDFphys2evQCD.f  README.md  ReadDataFile.f  gauleg.f  initDYcouplings.f  initxGridDY.f  readcDY.f  sigmafk_dy.f  wcDYlo.f  wcDYqg.f  wcDYqq.f  wcoeffDY.f  writeFK.f  writecDY.f  xlineigen.f
src/FragFunc/DSS/: dss_hnlo.inc  dss_klo.inc  dss_knlo.inc  dss_pinlo.inc  dss_plo.inc  dss_pnlo.inc
src/FragFunc/HKNS/: EM.inc  hkns_klo_no_err.inc
src/HELL/: README  makefile  test_evolution.cc
src/HELL/data/: gen_info.py  lo_nf5.info  lo_nf6.info  nlo_nf4.info
src/HELL/include/: expansionSFs.hh  gammaNLO.hh  hell-x.hh  hell.hh  hell_wrapper.hh  version.hh
src/HELL/src/: DGLAPevol.cc  expansionSFs.cc  gammaNLO.cc  hell-x.cc  hell.cc  hell_wrapper.cc
src/commons/: AlphaEvolution.h  CKM.h  CacheParams.h  CheckAPFEL.h  ColorFactors.h  DISOperators.h  DampingFONLL.h  DynScVar.h  EWCouplings.h  EpsTrunc.h  EvolOp.h  EvolutionMatrices.h  EvolutionOperator.h  FKObservable.h  GFermi.h  InAPFEL.h  InAPFELDIS.h  IntrinsicCharm.h  LHAgrid.h  LeptEvol.h  Makefile.am  MassInterpolIndices.h  MassRunning.h  MassScheme.h  MaxFlavourAlpha.h  NCComponent.h  NLOQEDCorrections.h  Nf_FF.h  PolarizationDIS.h  Polarized.h  PropagatorCorrection.h  ProtonMass.h  Replica.h  SMEFT.h  ScaleVariationProcedure.h  SelectedCharge.h  Sin2ThetaW.h  StructureFunctions.h  StructureFunctionsxQ.h  TMC.h  (+36 more)
src/core/: beta.f  dilog.f  hplog.f
tags/2.0.0/ccwrap/: Makefile.am  Makefile.in
trunk/examples/: DISObservables.f  LuminosityCxx.cc  LuminosityPython  Makefile.am  Makefile.in  Tabulation.f  TabulationCxx.cc  TabulationStep.f  TabulationStepCxx.cc
(+758 files in other folders)
