# build tests

file(GLOB testcodes *.cc *.f)
foreach(testsource ${testcodes})
  GET_FILENAME_COMPONENT(filename ${testsource} NAME_WE)
  add_executable(${filename} ${testsource})
  target_link_libraries(${filename} APFEL)
  #Different tests require different arguments.
  if (${filename} STREQUAL "Timing" )
    add_test(NAME ${filename}  COMMAND sh -c "${CMAKE_CURRENT_BINARY_DIR}/${filename} 2 QCD" )
  elseif (${filename} STREQUAL "TabulationStep" )
    #add_test(NAME ${filename}  COMMAND sh -c "${CMAKE_CURRENT_BINARY_DIR}/${filename}  <${CMAKE_CURRENT_SOURCE_DIR}/input.txt" )
  elseif (${filename} STREQUAL "TabulationStepCxx" )
    #add_test(NAME ${filename}  COMMAND sh -c "${CMAKE_CURRENT_BINARY_DIR}/${filename}  <${CMAKE_CURRENT_SOURCE_DIR}/input.txt" )
  else()
    add_test(NAME ${filename}  COMMAND sh -c "${CMAKE_CURRENT_BINARY_DIR}/${filename} <${CMAKE_CURRENT_SOURCE_DIR}/input.txt" )
  endif()
endforeach()

# This will download the needed PDFS, unpack them into a build directory and makes the LHAPDF to use those PDFS.
# This approach is important when user cannot or does not want to install the PDFs in the standard location.
if (APFEL_DOWNLOAD_PDFS AND APFEL_ENABLE_LHAPDF)
  file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/PDFS)
  include(FetchContent)
  FetchContent_Declare(NNPDF23_nlo_as_0118 URL https://lhapdfsets.web.cern.ch/current/NNPDF23_nlo_as_0118.tar.gz URL_HASH   MD5=139d93c4ed265d227294d8f8c72d6ef8)
  FetchContent_GetProperties(NNPDF23_nlo_as_0118)
  if (NOT NNPDF23_nlo_as_0118_nnlo_POPULATED)
    FetchContent_Populate(NNPDF23_nlo_as_0118)
    file(CREATE_LINK ${nnpdf23_nlo_as_0118_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/PDFS/NNPDF23_nlo_as_0118 SYMBOLIC)
  endif()
  FetchContent_Declare(NNPDF31_nnlo_as_0118 URL https://lhapdfsets.web.cern.ch/current/NNPDF31_nnlo_as_0118.tar.gz URL_HASH   MD5=4300488b31cd7995c1d375ed477b238e)
  FetchContent_GetProperties(NNPDF31_nnlo_as_0118)
  if (NOT NNPDF31_nnlo_as_0118_nnlo_POPULATED)
    FetchContent_Populate(NNPDF31_nnlo_as_0118)
    file(CREATE_LINK ${nnpdf31_nnlo_as_0118_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/PDFS/NNPDF31_nnlo_as_0118 SYMBOLIC)
  endif()       
  foreach( t LHgridDerivativeProduction LHgridProduction LHgridDerivativeProductionCxx)
    set_tests_properties( ${t} PROPERTIES ENVIRONMENT "LHAPDF_DATA_PATH=${CMAKE_CURRENT_BINARY_DIR}/PDFS")
  endforeach()
endif()
